docs/api/qiskit/2.4/qiskit.transpiler.passes.ConsolidateBlocks.mdx
---
title: ConsolidateBlocks (v2.4)
description: API reference for qiskit.transpiler.passes.ConsolidateBlocks in qiskit v2.4
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ConsolidateBlocks
---

# ConsolidateBlocks

<Class id="qiskit.transpiler.passes.ConsolidateBlocks" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/passes/optimization/consolidate_blocks.py#L58-L203" signature="qiskit.transpiler.passes.ConsolidateBlocks(*args, **kwargs)" modifiers="class">
  Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Replace each block of consecutive gates by a single Unitary node.

  Pass to consolidate sequences of uninterrupted gates acting on the same qubits into a [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate") node, to be resynthesized later, to a potentially more optimal subcircuit. The typical mode of operation of this pass is to run the analysis of the input [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit") to find all the two qubit blocks in the circuit and then determine based on an internal heuristic whether that block should be consolidated to a [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate") or not. However if either `block_list` or `run_list` are set in the property set then this pass will not do its own analysis of the DAG.

  There are two legacy modes of operation for this pass based on whether either `block_list` or `run_list` is set in the property set when this pass is run. `block_list` should contain a list of lists of node indices where each inner list represents a collection of blocks to be potentially consolidated into a [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate"). These blocks can be any number of qubits but in previous Qiskit releases’ preset pass managers it was typically two and set by the [`Collect2qBlocks`](qiskit.transpiler.passes.Collect2qBlocks "qiskit.transpiler.passes.Collect2qBlocks") pass. There is a also the [`CollectMultiQBlocks`](qiskit.transpiler.passes.CollectMultiQBlocks "qiskit.transpiler.passes.CollectMultiQBlocks") transpiler pass which will set `blocks_list` with blocks found for an arbitrary number of qubits. The other property set key `run_list` is a list of lists of “runs” which are single qubit blocks to consolidate. This was potentially set by the [`Collect1qRuns`](qiskit.transpiler.passes.Collect1qRuns "qiskit.transpiler.passes.Collect1qRuns") transpiler pass. This functionality for “runs” has been mostly superseded by the [`Optimize1qGatesDecomposition`](qiskit.transpiler.passes.Optimize1qGatesDecomposition "qiskit.transpiler.passes.Optimize1qGatesDecomposition") transpiler pass and that should typically be used instead for a more thorough and performant method of simplifying single qubit runs.

  This pass reads the [`PropertySet`](qiskit.passmanager.PropertySet "qiskit.passmanager.PropertySet") key `ConsolidateBlocks_qubit_map` which it uses to communicate with recursive worker instances of itself for control-flow operations. The key should never be observable in a user-facing [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager") pipeline (it is only set in internal [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager") instances), but the pass may return incorrect results or error if another pass sets this key.

  ConsolidateBlocks initializer.

  If `kak_basis_gate` is not `None` it will be used as the basis gate for KAK decomposition. Otherwise, if `basis_gates` is not `None` a basis gate will be chosen from this list. Otherwise, the basis gate will be [`CXGate`](qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate").

  **Parameters**

  *   **kak\_basis\_gate** ([*Gate*](qiskit.circuit.Gate "qiskit.circuit.Gate")) – Basis gate for KAK decomposition.
  *   **force\_consolidate** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – Force block consolidation.
  *   **basis\_gates** (*List(*[*str*](https://docs.python.org/3/library/stdtypes.html#str)*)*) – Basis gates from which to choose a KAK gate.
  *   **approximation\_degree** ([*float*](https://docs.python.org/3/library/functions.html#float)) – a float between $[0.0, 1.0]$. Lower approximates more.
  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – The target object for the compilation target backend.

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.ConsolidateBlocks.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.ConsolidateBlocks.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### execute

  <Function id="qiskit.transpiler.passes.ConsolidateBlocks.execute" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/basepasses.py#L161-L180" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any)) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable) *| None*) – A callback function which is called per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any), [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")]
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.ConsolidateBlocks.name" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/passmanager/base_tasks.py#L67-L69" signature="name()">
    Name of the pass.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str)
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.ConsolidateBlocks.run" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/passes/optimization/consolidate_blocks.py#L144-L182" signature="run(dag)">
    Run the ConsolidateBlocks pass on dag.

    Iterate over each block and replace it with an equivalent Unitary on the same wires.
  </Function>

  ### update\_status

  <Function id="qiskit.transpiler.passes.ConsolidateBlocks.update_status" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/basepasses.py#L182-L190" signature="update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – Pass manager state to update.
    *   **run\_state** (*RunState*) – Completion status of current task.

    **Returns**

    Updated pass manager state.

    **Return type**

    [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")
  </Function>
</Class>

